@@ -1,4 +1,4 @@
-/* $Id: key-bindings.c,v 1.56 2009-01-18 17:20:52 nicm Exp $ */
+/* $Id: key-bindings.c,v 1.57 2009-01-18 18:31:45 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -111,6 +111,8 @@ key_bindings_init(void)
 		{ 'w', &cmd_choose_window_entry },
 		{ 'x', &cmd_kill_pane_entry, },
 		{ '\032', &cmd_suspend_client_entry },
+		{ KEYC_ADDESC('n'), &cmd_next_window_entry },
+		{ KEYC_ADDESC('p'), &cmd_previous_window_entry },
 		{ KEYC_UP, &cmd_up_pane_entry },
 		{ KEYC_DOWN, &cmd_down_pane_entry },
 		{ KEYC_ADDESC(KEYC_UP), &cmd_resize_pane_up_entry },
